sfdx-source/force-app/main/default/objects/Data_Transfer_Mapping__mdt/Data_Transfer_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Data Transfer Mapping</label>
    <pluralLabel>Data Transfer Mappings</pluralLabel>
</CustomObject>