sfdx-source/force-app/main/default/objects/Data_Transfer_Mapping__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>